--- a/style.css
+++ b/style.css
@@ -34,3 +34,15 @@ section {
 .button-link:hover {
   background-color: #0056b3; /* Warna biru lebih gelap saat hover */
 }
+
+.custom-navbar {
+  background-color: rgba(0, 123, 255, 0.5) !important; /* Warna biru dengan 50% opasitas */
+}
+
+.navbar-nav .nav-link {
+  color: white !important; /* Warna teks putih */
+}
+
+.navbar-nav .nav-link:hover {
+  color: lightgray !important; /* Warna teks saat di-hover */
+}
